# sfg-rewrite-c

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  build.ps1  build_test.ps1
include/NovaLib/: mesh.h  model.h  utility.h
src/: main.cpp  shader.fs  shader.vs  utility.cpp
tmp/: opengl_example.cpp
